test/libsolidity/syntaxTests/nameAndTypeResolution/290_varM_disqualified_as_keyword_3.sol
contract test {
    function f() public {
        bytesM fail = "now";
    }
}
// ----
// DeclarationError 7920: (50-56): Identifier not found or not unique.
